list restaurant and map are correctly aligned

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,28 @@
 
-#map {
-  min-width: 400px;
+section {
   height: 600px;
+  position: fixed;
+  bottom: 0px;
+  left: 300px;
   width: 100%;
+  display: inline-block;
   background-color: grey;
+}
+
+#ratings {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
+
+aside {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 10px;
+  background: white;
+  width:300px;
+  height: 100%;
 }
